# rust-core-models

./: .gitignore  Cargo.toml  Makefile  README.md  patch_lean.py
.github/workflows/: ci.yml
aeneas-test/: Cargo.toml  Makefile
aeneas-test/lean/: lake-manifest.json  lakefile.toml
aeneas-test/lean/AeneasTest/: Funs.lean  FunsExternal.lean  Types.lean
aeneas-test/src/: lib.rs
alloc/: Cargo.toml
alloc/proofs/fstar/extraction/: Alloc.Alloc.fst  Alloc.Borrow.fst  Alloc.Boxed.fst  Alloc.Collections.Binary_heap.fst  Alloc.Collections.Btree.Set.fsti  Alloc.Collections.Vec_deque.fsti  Alloc.Fmt.fst  Alloc.Slice.fst  Alloc.String.fst  Alloc.Vec.Drain.fst  Alloc.Vec.Into_iter.fst  Alloc.Vec.fst
alloc/proofs/lean/extraction/: alloc.lean
alloc/src/: lib.rs
core-models/: Cargo.toml
core-models/proofs/proverif/extraction/: lib.pvl
core-models/src/: lib.rs  testing.rs
core-models/src/core/: array.rs  borrow.rs  clone.rs  cmp.rs  convert.rs  default.rs  error.rs  f32.rs  fmt.rs  hash.rs  hint.rs  iter.rs  marker.rs  mem.rs  ops.rs  option.rs  panicking.rs  result.rs  slice.rs  str.rs
core-models/src/core/num/: error.rs  mod.rs
lean/: Aeneas.lean  CoreModels.lean  lake-manifest.json  lakefile.toml
lean/Aeneas/: Funs.lean  FunsExternal.lean  FunsExternal_Template.lean  ISize64.lean  Instances.lean  MissingLean.lean  Primitives.lean  PureFuns.lean  StdAliases.lean  StdAliasesAlloc.lean  Types.lean  TypesExternal.lean  TypesExternal_Template.lean  USize64.lean
lean/Aeneas/Alloc/: Funs.lean  Types.lean
lean/Aeneas/MissingLean/Init/: Prelude.lean
lean/Aeneas/MissingLean/Init/Data/SInt/: Basic.lean  Basic_Int128.lean  Lemmas.lean  Lemmas_Int128.lean
lean/Aeneas/MissingLean/Init/Data/UInt/: Basic.lean  BasicAux.lean  Lemmas.lean  Lemmas_UInt128.lean
lean/Aeneas/MissingLean/Init/GrindInstances/: ToInt.lean
lean/Aeneas/MissingLean/Init/GrindInstances/Ring/: SInt.lean  UInt.lean
lean/Aeneas/MissingLean/Lean/: ToExpr.lean
lean/Aeneas/MissingLean/Lean/Tactic/Simp/BuiltinSimpProcs/: SInt.lean  UInt.lean
lean/Aeneas/MissingLean/Std/Do/Triple/: Basic.lean  SpecLemmas.lean
lean/CoreModels/: Alloc.lean  Command.lean  Core.lean  Forward.lean  Funs.lean  FunsEpilogue.lean  FunsExternal.lean  FunsExternal_Template.lean  FunsPrologue.lean  HaxLib.lean  Instances.lean  Primitives.lean  RustPrimitives.lean  Spec.lean  Specs.lean  Types.lean  TypesExternal.lean  TypesExternal_Template.lean  TypesPrologue.lean
lean/CoreModels/Alloc/: Funs.lean  Types.lean
lean/CoreModels/Command/: OpenHidingNamespace.lean
lean/CoreModels/Core/: Funs.lean  FunsEpilogue.lean  FunsExternal.lean  FunsPrologue.lean  Types.lean  TypesExternal.lean  TypesPrologue.lean
lean/CoreModels/HaxLib/: Funs.lean
lean/CoreModels/RustPrimitives/: Funs.lean  Types.lean
lean/CoreModels/Spec/: Aeneas.lean  Array.lean
rust_primitives/: Cargo.toml
rust_primitives/proofs/proverif/extraction/: lib.pvl
rust_primitives/src/: lib.rs
test-suite/: Cargo.toml  Makefile
test-suite/lean/: lake-manifest.json  lakefile.toml
test-suite/lean/TestSuite/: Funs.lean  Types.lean  TypesExternal.lean
test-suite/src/: lib.rs
tests/: Cargo.toml  Makefile
tests/client_test/: Cargo.toml  Makefile
tests/client_test/lean/: ClientTest.lean  lakefile.toml
tests/client_test/lean/ClientTest/: FunsExternal.lean  TypesExternal.lean
tests/client_test/src/: lib.rs
tests/lean/: Tests.lean  lake-manifest.json  lakefile.toml
tests/lean/Tests/: FunsExternal.lean
tests/rust_lean_equiv_test/: Makefile  gen_lean_tests.py
tests/rust_lean_equiv_test/lean/: RustLeanTests.lean  lakefile.toml
tests/rust_lean_equiv_test/lean/RustLeanTests/: FunsExternal.lean
tests/rust_lean_equiv_test/macro/: Cargo.toml
tests/rust_lean_equiv_test/macro/src/: lib.rs
tests/rust_lean_equiv_test/source/: Cargo.toml
tests/rust_lean_equiv_test/source/src/: helpers.rs  lib.rs
tests/rust_lean_equiv_test/source/src/alloc/: boxed.rs  mod.rs  slice.rs  vec.rs
tests/rust_lean_equiv_test/source/src/core/: array.rs  clone.rs  cmp.rs  convert.rs  hint.rs  iter.rs  mem.rs  mod.rs  num.rs  ops.rs  option.rs  result.rs  slice.rs
tests/src/: lib.rs
