[package]
name = "rust_lean_tests"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
rust-lean-test-macro = { path = "../macro" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hax)', 'cfg(hax_compilation)', 'cfg(hax_backend_fstar)', 'cfg(hax_backend_lean)'] }
